Ajax done, final steps

--- a/src/_posts/2015-04-01-helloworld.html
+++ b/src/_posts/2015-04-01-helloworld.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2015-04-01
-title: Step 1: Helloworld
+title: Step 1 Helloworld
 categories: dojo tutorial
 ---
 <p class="lead"><a href="http://dojotoolkit.org/documentation/tutorials/1.10/hello_dojo/index.html">Step 1: <span id="helloworld" class="hideIt">Hello World</span></a></p>
