--- a/src/_posts/2015-04-02-using-dojo-query.html
+++ b/src/_posts/2015-04-02-using-dojo-query.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2015-04-02
-title: Step 2: Using dojo/query
+title: Step 2 Using dojo/query
 categories: dojo tutorial
 ---
       <p>Getting Started | Queries | Restricting your query | More advanced selections | NodeList | Events</p>
