--- a/src/_posts/2015-04-03-events-with-dojo.html
+++ b/src/_posts/2015-04-03-events-with-dojo.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2015-04-03
-title: Step 3: Events with Dojo
+title: Step 3 Events with Dojo
 categories: dojo tutorial
 ---
       <div class="row">
