--- a/src/_posts/2015-04-04-animation.html
+++ b/src/_posts/2015-04-04-animation.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2015-04-04
-title: Step 4: Animation
+title: Step 4 Animation
 categories: dojo tutorial
 ---
     <div class="row">
